# ohtu_palautukset

./: README.md
viikko1/nhl-statistics/src/: .coverage  statistics_service.py
viikko1/nhl-statistics/src/tests/: statistics_service_test.py
viikko1/riippuvuuksien-injektointi/src/tests/: laskin_test.py
viikko2/nhl-reader/: pyproject.toml
viikko2/nhl-reader/src/: index.py  player.py  player_reader.py  player_stats.py
