[project]
name = "nhl-reader"
version = "0.1.0"
description = ""
authors = [
    {name = "Matti Luukkainen",email = "mluukkai@iki.fi"}
]
license = {text = "MIT"}
requires-python = "^3.12"
dependencies = [
    "requests",
    "rich",
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pylint.FORMAT]
max-line-length=200

[tool.pylint.REFACTORING]
max-nested-blocks=2

[tool.pylint.DESIGN]
max-statements=10
max-args=5